post added to form

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <form class="container">
+    <form class="container" method="POST">
         <h1  style="margin-left: 100px;" >Room Rental Services</h1>
 
         <div style="display: flex;">
